gac_sb/objects/Facture__c.object
<CustomObject>
    <fields>
        <fullName>Typologie_creance__c</fullName>
        <label>Typologie créance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A relancer</fullName>
                    <default>true</default>
                    <label>A relancer</label>
                </value>
                <value>
                    <fullName>En cours de relance</fullName>
                </value>
                <value>
                    <fullName>Promesse client</fullName>
                </value>
                <value>
                    <fullName>Blocage mission</fullName>
                </value>
                <value>
                    <fullName>En procédure</fullName>
                </value>
                <value>
                    <fullName>Contentieux avocat</fullName>
                </value>
                <value>
                    <fullName>Problème de trésorerie</fullName>
                </value>
                <value>
                    <fullName>Litige mission</fullName>
                </value>
                <value>
                    <fullName>Invoice with problem</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vencimiento__c</fullName>
        <label>Data de Vencimiento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30 días f.f.</fullName>
                </value>
                <value>
                    <fullName>60 días f.f.</fullName>
                </value>
                <value>
                    <fullName>90 días f.f.</fullName>
                </value>
                <value>
                    <fullName>Contado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>percent_Prestation__c</fullName>
        <label>% Prestation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>potentiellement_encaissable__c</fullName>
        <label>% potentiellement encaissable</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>provisionner__c</fullName>
        <label>% à provisionner</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>v1_Montant_annule_par_avoir_TTC__c</fullName>
        <formula>/*Montant_annule_par_avoir2_TTC__c */
Montant_annule_par_avoir_HT__c  + ( Montant_annule_par_avoir_HT__c *  Taux_TVA__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zz- v1old -Montant annulé par avoir TTC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Facture</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Date__c</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Montant_HT__c</columns>
        <columns>Montant_TTC__c</columns>
        <columns>Statut_image__c</columns>
        <columns>Creance_douteuse__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>N° Facture</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factures</pluralLabel>
    <recordTypes>
        <fullName>Avoir_non_valide</fullName>
        <active>true</active>
        <description>Avoir non validé</description>
        <label>Avoir non validé</label>
    </recordTypes>
    <recordTypes>
        <fullName>Avoir_valide</fullName>
        <active>true</active>
        <description>Avoir validé</description>
        <label>Avoir validé</label>
    </recordTypes>
    <recordTypes>
        <fullName>BR_Avoir_non_valide</fullName>
        <active>true</active>
        <label>BR - Avoir non validé</label>
    </recordTypes>
    <recordTypes>
        <fullName>BR_Avoir_valide</fullName>
        <active>true</active>
        <label>BR - Avoir validé</label>
    </recordTypes>
    <recordTypes>
        <fullName>BR_Facture_non_valide</fullName>
        <active>true</active>
        <label>BR - Facture non validée</label>
    </recordTypes>
    <recordTypes>
        <fullName>BR_Facture_valide</fullName>
        <active>true</active>
        <label>BR - Facture validée</label>
    </recordTypes>
    <recordTypes>
        <fullName>Canada_Avoir_valid</fullName>
        <active>true</active>
        <label>Canada Avoir validé</label>
    </recordTypes>
    <recordTypes>
        <fullName>Canada_Facture_non_valid_e</fullName>
        <active>true</active>
        <label>Canada Facture non validée</label>
    </recordTypes>
    <recordTypes>
        <fullName>Canada_Facture_valid_e</fullName>
        <active>true</active>
        <label>Canada Facture validée</label>
    </recordTypes>
    <recordTypes>
        <fullName>Canada_avoir_non_valid</fullName>
        <active>true</active>
        <label>Canada avoir non validé</label>
    </recordTypes>
    <recordTypes>
        <fullName>ES_Avoir_non_valide</fullName>
        <active>true</active>
        <description>ES</description>
        <label>ES - Avoir non validé</label>
    </recordTypes>
    <recordTypes>
        <fullName>ES_Avoir_valide</fullName>
        <active>true</active>
        <description>ES</description>
        <label>ES - Avoir validé</label>
    </recordTypes>
    <recordTypes>
        <fullName>ES_Facture_non_valide</fullName>
        <active>true</active>
        <description>ES</description>
        <label>ES - Facture non validée</label>
    </recordTypes>
    <recordTypes>
        <fullName>ES_Facture_valide</fullName>
        <active>true</active>
        <description>ES</description>
        <label>ES - Facture validée</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facture_non_valide</fullName>
        <active>true</active>
        <description>Facture non validée</description>
        <label>Facture non validée</label>
    </recordTypes>
    <recordTypes>
        <fullName>Facture_valide</fullName>
        <active>true</active>
        <description>Facture validée</description>
        <label>Facture validée</label>
    </recordTypes>
    <recordTypes>
        <fullName>SGP_Avoir_non_valide</fullName>
        <active>true</active>
        <label>SGP - Avoir non validé</label>
    </recordTypes>
    <recordTypes>
        <fullName>SGP_Avoir_valide</fullName>
        <active>true</active>
        <label>SGP - Avoir validé</label>
    </recordTypes>
    <recordTypes>
        <fullName>SGP_Facture_non_validee</fullName>
        <active>true</active>
        <label>SGP - Facture non validée</label>
    </recordTypes>
    <recordTypes>
        <fullName>SGP_Facture_validee</fullName>
        <active>true</active>
        <label>SGP - Facture validée</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_Compte_et_Contrat_sur_avoir</fullName>
        <active>true</active>
        <description>On ne peut pas relier l&apos;avoir à une facture d&apos;un compte différent ou d&apos;un type de contrat différent</description>
        <errorConditionFormula>CONTAINS( $RecordType.DeveloperName , &apos;Avoir&apos;) &amp;&amp;
NOT(ISBLANK(Facture_liee__c)) &amp;&amp;
(Contrat__r.Account.Id &lt;&gt;  Facture_liee__r.Contrat__r.Account.Id || Contrat__r.RecordType.Name &lt;&gt; Facture_liee__r.Contrat__r.RecordType.Name)</errorConditionFormula>
        <errorDisplayField>Facture_liee__c</errorDisplayField>
        <errorMessage>On ne peut pas relier l&apos;avoir à une facture d&apos;un compte différent ou d&apos;un type de contrat différent</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Precision_blocage_mission</fullName>
        <active>true</active>
        <description>Vérifie que la précision blocage mission est obligatoire</description>
        <errorConditionFormula>AND(OR(Contrat__r.RecordType.Name = &apos;CIR&apos;,Contrat__r.RecordType.Name = &apos;FI&apos;),Montant_creance_HT__c &gt; 0, ISPICKVAL(Typologie_creance__c,&apos;Blocage mission&apos;), ISPICKVAL( Precision_blocage_mission__c,&apos;&apos;), $Profile.Name = &apos;Service facturation INNO&apos;)</errorConditionFormula>
        <errorDisplayField>Precision_blocage_mission__c</errorDisplayField>
        <errorMessage>Merci de renseigner la précision blocage mission</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_SUM_Encaissement</fullName>
        <active>true</active>
        <description>La somme des encaissements ne peut pas être supérieure au montant de la facture</description>
        <errorConditionFormula>(Montant_encaisse_TTC__c  &gt;  (Montant_TTC__c + 1)) &amp;&amp; Type__c &lt;&gt; &apos;Avoir&apos;</errorConditionFormula>
        <errorMessage>La somme des encaissements ne peut pas être supérieure au montant de la facture</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_SUM_Previsions_encaissement</fullName>
        <active>true</active>
        <description>La somme des prévisions d&apos;encaissement ne peut pas être supérieure au montant de la facture</description>
        <errorConditionFormula>(Montant_previsions_encaissement_TTC__c &gt; Montant_TTC__c+1) &amp;&amp;
Type__c &lt;&gt; &apos;Avoir&apos;</errorConditionFormula>
        <errorMessage>La somme des prévisions d&apos;encaissement ne peut pas être supérieure au montant de la facture</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Typologie_Creance</fullName>
        <active>true</active>
        <description>Vérifie que typologie créance est obligatoire</description>
        <errorConditionFormula>AND(OR(Contrat__r.RecordType.Name = &apos;CIR&apos;,Contrat__r.RecordType.Name = &apos;FI&apos;),Montant_creance_HT__c &gt; 0, ISPICKVAL(Typologie_creance__c,&apos;&apos;), $Profile.Name = &apos;Service facturation INNO&apos;,NOT(ISCHANGED(RecordTypeId)), RecordType.DeveloperName = &apos;Facture_valide&apos;)</errorConditionFormula>
        <errorDisplayField>Typologie_creance__c</errorDisplayField>
        <errorMessage>Merci de renseigner la typologie de la créance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_avoir</fullName>
        <active>true</active>
        <description>Un avoir doit forcément avoir un montant négatif</description>
        <errorConditionFormula>CONTAINS( $RecordType.DeveloperName , &apos;Avoir&apos;) &amp;&amp;  Montant_HT__c &gt; 0</errorConditionFormula>
        <errorMessage>Un avoir doit forcément avoir un montant négatif</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_contrat_mission</fullName>
        <active>true</active>
        <description>Vérifie si le contrat de rattachement de la planification est bien le même que celui de la mission</description>
        <errorConditionFormula>Contrat__c &lt;&gt; Mission__r.Contrat__c</errorConditionFormula>
        <errorMessage>Vérifie si le contrat de rattachement de la planification est bien le même que celui de la mission</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_creance_douteuse</fullName>
        <active>true</active>
        <description>Si la créance est classée en douteuse alors il faut mettre un commentaire</description>
        <errorConditionFormula>Creance_douteuse__c &amp;&amp; ISNULL(Commentaire_ceance_douteuse__c)</errorConditionFormula>
        <errorDisplayField>Commentaire_ceance_douteuse__c</errorDisplayField>
        <errorMessage>Si la créance est classée en douteuse alors il faut mettre un commentaire</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_creance_irrecouvrable</fullName>
        <active>true</active>
        <description>Si la créance est classée irrécouvrable alors il faut indiquer le montant perdu</description>
        <errorConditionFormula>Creance_irrecouvrable__c &amp;&amp; ISNULL( Montant_perdu__c ) &amp;&amp;  $Profile.Name &lt;&gt; &apos;Administrateur système&apos;</errorConditionFormula>
        <errorDisplayField>Montant_perdu__c</errorDisplayField>
        <errorMessage>Si la créance est classée irrécouvrable alors il faut indiquer le montant perdu</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_date_blocage_facture</fullName>
        <active>true</active>
        <description>Vérifie la date de la facture par rapport à la date de blocage en cours</description>
        <errorConditionFormula>(ISNEW() || ISCHANGED( Date__c )) &amp;&amp;  
(
 (  ISPICKVAL(Division,&apos;FRANCE&apos;)  &amp;&amp; Date__c &lt;= $Setup.FacturationSetting__c.Date_blocage__c)
 ||
 ( !ISPICKVAL(Division,&apos;FRANCE&apos;)  &amp;&amp; Date__c &lt; DATE(YEAR(TODAY()),MONTH(TODAY()),1)  ) 
) 
 &amp;&amp;  $Profile.Name &lt;&gt; &apos;Administrateur système&apos;</errorConditionFormula>
        <errorMessage>Il n&apos;est plus possible de créer une facture à la date indiquée.
Merci de vous rapprocher du service comptabilité</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_date_creance_irrecouvrable</fullName>
        <active>true</active>
        <description>Si la facture passe en irrécouvrable il faut renseigner la date créance irrécouvrable</description>
        <errorConditionFormula>Creance_irrecouvrable__c &amp;&amp;  ISBLANK(Date_cr_ance_irr_couvrable__c) &amp;&amp; $Profile.Name &lt;&gt; &apos;Administrateur système&apos;</errorConditionFormula>
        <errorDisplayField>Date_cr_ance_irr_couvrable__c</errorDisplayField>
        <errorMessage>Si la facture passe en irrécouvrable il faut renseigner la date créance irrécouvrable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_facture_liee_sur_avoir</fullName>
        <active>true</active>
        <description>On ne peut pas relier l&apos;avoir à une facture déjà soldée.</description>
        <errorConditionFormula>CONTAINS( $RecordType.DeveloperName , &apos;Avoir&apos;) &amp;&amp;
ISCHANGED( Facture_liee__c ) &amp;&amp;
NOT(ISBLANK(Facture_liee__c)) &amp;&amp;
(ISPICKVAL(Facture_liee__r.Statut__c ,&apos;Soldée&apos;))  &amp;&amp;
$Profile.Name != &apos;Administrateur système&apos; &amp;&amp;
$Profile.Name != &apos;FR - Sup - Compta&apos; &amp;&amp;
$Profile.Name != &apos;Direction financière&apos; &amp;&amp;
$Profile.Name != &apos;Contrôle de Gestion&apos; &amp;&amp;
$Profile.Name != &apos;SGP - Dir - DG&apos;</errorConditionFormula>
        <errorDisplayField>Facture_liee__c</errorDisplayField>
        <errorMessage>On ne peut pas relier l&apos;avoir à une facture déjà soldée.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_prevision_encaissement_existe</fullName>
        <active>true</active>
        <description>Vérifie si il y a au moins 1 prévision d&apos;encaissement quand la facture est en créance (mais pas douteuse ou irrecouvrable)</description>
        <errorConditionFormula>Contrat__r.Account.RecordType.DeveloperName == &apos;FRANCE_ACCOUNT&apos; &amp;&amp; Montant_previsions_encaissement_TTC__c &lt;= 0 &amp;&amp; Montant_creance_TTC__c &gt; 0 &amp;&amp; !Creance_douteuse__c &amp;&amp; !Creance_irrecouvrable__c &amp;&amp; ISCHANGED(Montant_previsions_encaissement_TTC__c)</errorConditionFormula>
        <errorMessage>Tant que la facture est en créance (sauf créance douteuse ou irrécouvrable) il doit y avoir au moins une prévision d’encaissement de saisie.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_solde</fullName>
        <active>true</active>
        <description>Check solde</description>
        <errorConditionFormula>!ISPICKVAL(Division,&quot;BRASIL&quot;)  &amp;&amp; 
Montant_HT__c  &gt; 0 &amp;&amp; 
Solde__c &lt; -1</errorConditionFormula>
        <errorMessage>Le solde ne peut pas être négatif (il y a trop d&apos;encaissements et/ou d&apos;avoirs sur la facture)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Facture_liee_Obligatoire_sur_Avoir</fullName>
        <active>false</active>
        <description>Un avoir doit obligatoirement être lié à une facture.</description>
        <errorConditionFormula>CONTAINS( $RecordType.DeveloperName , &apos;Avoir&apos;) &amp;&amp;
ISBLANK(Facture_liee__c) &amp;&amp; ISNEW() &amp;&amp; ISBLANK( Montant_paye_au_client__c )</errorConditionFormula>
        <errorMessage>Un avoir doit obligatoirement être lié à une facture.
Merci de renseigner le champ Facture liée</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Montant_Perdu_inferieur_Montant_Creance</fullName>
        <active>true</active>
        <description>Le Montant perdu TTC doit être inférieur ou égale au montant de la créance TTC.</description>
        <errorConditionFormula>Montant_perdu__c   &gt;  Montant_creance_TTC__c</errorConditionFormula>
        <errorMessage>Le Montant perdu TTC doit être inférieur ou égale au montant de la créance TTC.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TVA_a_20percent_obligatoire_01_2014</fullName>
        <active>false</active>
        <description>TVA obligatoire à 20% dès le 1er Janvier 2014</description>
        <errorConditionFormula>(YEAR(Date__c) &gt;= 2014) &amp;&amp;
(Taux_TVA__c &lt;&gt; 0.2) &amp;&amp;
(ISPICKVAL(Division,&apos;FRANCE&apos;))</errorConditionFormula>
        <errorMessage>Le taux de TVA doit être égale à 20% sur les factures émises depuis le 1er Janvier 2014.</errorMessage>
    </validationRules>
</CustomObject>